app/styles/reen/main.css
/* ... */
.border-right-lg,
.border-right-md,
.border-right-sm,
.border-right-xs,
.border-right {
	border-right: 1px solid #CED7E0;
}
.border-bottom-lg,
.border-bottom-md,
.border-bottom-sm,
.border-bottom-xs,
.border-bottom {
	border-bottom: 1px solid #CED7E0;
}
.border-left-lg,
.border-left-md,
.border-left-sm,
.border-left-xs,
.border-left {
	border-left: 1px solid #CED7E0;
}
.border-lg,
.border-top-lg,
.border-right-lg,
.border-bottom-lg,
.border-left-lg {
	border-width: 20px;
}
.border-md,
.border-top-md,
.border-right-md,
.border-bottom-md,
.border-left-md {
	border-width: 10px;
}
.border-sm,
.border-top-sm,
.border-right-sm,
.border-bottom-sm,
.border-left-sm {
	border-width: 5px;
}
.border-xs,
.border-top-xs,
.border-right-xs,
.border-bottom-xs,
.border-left-xs {
	border-width: 3px;
}
.light-bg .border,
.light-bg .border-lg,
.light-bg .border-md,
.light-bg .border-sm,
.light-bg .border-xs,
.light-bg .border-top-lg,
.light-bg .border-top-md,
.light-bg .border-top-sm,
.light-bg .border-top-xs,
.light-bg .border-top,
.light-bg .border-right-lg,
.light-bg .border-right-md,
.light-bg .border-right-sm,
.light-bg .border-right-xs,
.light-bg .border-right,
.light-bg .border-bottom-lg,
.light-bg .border-bottom-md,
.light-bg .border-bottom-sm,
.light-bg .border-bottom-xs,
.light-bg .border-bottom,
.light-bg .border-left-lg,
.light-bg .border-left-md,
.light-bg .border-left-sm,
.light-bg .border-left-xs,
.light-bg .border-left {
	border-color: #BCC7D1;
}
.dark-bg .border,
.dark-bg .border-lg,
.dark-bg .border-md,
.dark-bg .border-sm,
.dark-bg .border-xs,
.dark-bg .border-top-lg,
.dark-bg .border-top-md,
.dark-bg .border-top-sm,
.dark-bg .border-top-xs,
.dark-bg .border-top,
.dark-bg .border-right-lg,
.dark-bg .border-right-md,
.dark-bg .border-right-sm,
.dark-bg .border-right-xs,
.dark-bg .border-right,
.dark-bg .border-bottom-lg,
.dark-bg .border-bottom-md,
.dark-bg .border-bottom-sm,
.dark-bg .border-bottom-xs,
.dark-bg .border-bottom,
.dark-bg .border-left-lg,
.dark-bg .border-left-md,
.dark-bg .border-left-sm,
.dark-bg .border-left-xs,
.dark-bg .border-left {
	border-color: #999999;
}
.tint-bg .border,
.tint-bg .border-lg,
.tint-bg .border-md,
.tint-bg .border-sm,
.tint-bg .border-xs,
.tint-bg .border-top-lg,
.tint-bg .border-top-md,
.tint-bg .border-top-sm,
.tint-bg .border-top-xs,
.tint-bg .border-top,
.tint-bg .border-right-lg,
.tint-bg .border-right-md,
.tint-bg .border-right-sm,
.tint-bg .border-right-xs,
.tint-bg .border-right,
.tint-bg .border-bottom-lg,
.tint-bg .border-bottom-md,
.tint-bg .border-bottom-sm,
.tint-bg .border-bottom-xs,
.tint-bg .border-bottom,
.tint-bg .border-left-lg,
.tint-bg .border-left-md,
.tint-bg .border-left-sm,
.tint-bg .border-left-xs,
.tint-bg .border-left {
	border-color: #FFF;
}
.last-bottom {
	padding-bottom: 0 !important;
	margin-bottom: 0 !important;
}
.last-right {
	padding-right: 0 !important;
	margin-right: 0 !important;
}
.reset-margin {
	margin: 0;
}
.reset-margin-left {
	margin-left: 0;
}
.reset-margin-right {
	margin-right: 0;
}
.reset-padding {
	padding: 0;
}
.reset-padding-left {
	padding-left: 0;
}
.reset-padding-right {
	padding-right: 0;
}
.single-block {
	padding: 0;
	border: 0;
	margin: 0;
}
h1 + .single-line,
h2 + .single-line,
h3 + .single-line,
h4 + .single-line {
	margin-top: -.5em;
}
.img-intext {
    margin-bottom: 20px;
}
aside {
	font-size: 16px;
	line-height: 160%;
}
aside p {
	margin-bottom: 15px;
}
aside .txt-btn {
	font-size: 100%;
}
aside .thumb figure {
	margin: 0;
}
.thumbs.no-gap {
	margin-left: 0;
	margin-right: 0;
}
.thumbs.no-gap .thumb {
	padding: 0;
}
.thumbs.gap-xs {
	margin-left: -5px;
	margin-right: 0;
}
.thumbs.gap-xs .thumb {
	padding: 0 0 5px 5px;
}
.thumbs.gap-sm {
	margin-left: -10px;
	margin-right: 0;
}
.thumbs.gap-sm .thumb {
	padding: 0 0 10px 10px;
}
.thumbs.gap-md {
	margin-left: -20px;
	margin-right: 0;
}
.thumbs.gap-md .thumb {
	padding: 0 0 20px 20px;
}
.thumbs.gap-lg {
	margin-left: -30px;
	margin-right: 0;
}
.thumbs.gap-lg .thumb {
	padding: 0 0 30px 30px;
}


/*===================================================================================*/
/*	HEADER
/*===================================================================================*/

.navbar .container {
	display: table;
    padding: 0;
}
.navbar {
    margin: 0;
    border-radius: 0;
    border: none;
    position: relative;
    z-index: 8000;
    min-height: inherit;
}
.navbar ul {
	list-style: none;
}
.navbar-brand {
	float: none;
	display: table-cell;
	vertical-align: middle;
    padding: 0;
	max-width: 300px;
}
.navbar-brand img {
	max-height: 40px;
}
.navbar-header .navbar-brand {
	display: none;
}
.navbar-header {
    display: none !important;
	position: relative;
	background: #F5F7FA;
	z-index: 0;
}
.navbar-header li,
.navbar-header a {
	display: table-cell;
	vertical-align: middle;
	height: 40px;
}
.navbar-collapse {
    position: relative;
    background-color: #FFF;
	width: 100%;
	padding-top: 30px;
	padding-bottom: 30px;
	border-bottom: 1px solid #E6E9ED;
}
.navbar-collapse.collapse.stuck {
	position: fixed;
	top: -1px;
	padding-top: 0;
	padding-bottom: 0;
	-webkit-box-shadow: 0 10px 10px rgba(0,0,0,0.1);
	   -moz-box-shadow: 0 10px 10px rgba(0,0,0,0.1);
			box-shadow: 0 10px 10px rgba(0,0,0,0.1);
}
.navbar-nav {
	float: none;
	display: table-cell;
	vertical-align: middle;
	padding-left: 30px;
    margin: 0;
}
.navbar-nav > li > a {
    font-size: 15px;
	line-height: 20px;
    font-weight: 700;
    text-transform: uppercase;
    color: #777777;
    padding: 15px 20px;
	border: 1px solid rgba(255,255,255,0);
	border-bottom: none;
	-webkit-border-top-right-radius: 3px;
	 -webkit-border-top-left-radius: 3px;
	    -moz-border-radius-topright: 3px;
	     -moz-border-radius-topleft: 3px;
	        border-top-right-radius: 3px;
	         border-top-left-radius: 3px;
	bottom: -1px;
	z-index: 1;
}
/* ... */

